Create <> header for the document

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Duolingo - The world's best way to learn a language</title>
 </head>
 <body>
+
+    <header class="header">
+        
+      </header>
     
 </body>
 </html>
