Add <> products container content

--- a/index.html
+++ b/index.html
@@ -275,6 +275,33 @@
             </ul>
           </div>
   
+          <div>
+            <div class="footer-minititle">Products</div>
+            <ul>
+              <li><a href="">Duolingo</a></li>
+              <li>
+                <a href="https://schools.duolingo.com">Duolingo for Schools</a>
+              </li>
+              <li>
+                <a href="https://englishtest.duolingo.com/en"
+                  >Duolingo English Test</a
+                >
+              </li>
+              <li>
+                <a href="https://blog.duolingo.com/duolingo-launches-math-app"
+                  >Duolingo Math</a
+                >
+              </li>
+              <li><a href="https://podcast.duolingo.com">Podcast</a></li>
+              <li><a href="/business">Duolingo for Business</a></li>
+              <li><a href="/super">Super Duolingo</a></li>
+              <li><a href="/gift">Gift Super Duolingo</a></li>
+              <li>
+                <a href="https://blog.duolingo.com/duolingo-max/">Duolingo Max</a>
+              </li>
+            </ul>
+          </div>
+  
           
         </section>
   
