--- a/index.html
+++ b/index.html
@@ -302,6 +302,24 @@
             </ul>
           </div>
   
+          <div>
+            <div class="footer-minititle">Apps</div>
+            <ul>
+              <li>
+                <a
+                  href="//play.google.com/store/apps/details?hl=en&amp;id=com.duolingo&amp;referrer=utm_source%3Dduolingo.com%26utm_medium%3Dduolingo_web%26utm_content%3Ddownload_button%26utm_campaign%3Dsite_map"
+                  >Duolingo for Android</a
+                >
+              </li>
+              <li>
+                <a
+                  href="//itunes.apple.com/app/duolingo-learn-spanish-french/id570060128?mt=8"
+                  >Duolingo for iOS</a
+                >
+              </li>
+            </ul>
+          </div>
+  
           
         </section>
   
