Add <> help and support container content

--- a/index.html
+++ b/index.html
@@ -320,6 +320,24 @@
             </ul>
           </div>
   
+          <div>
+            <div class="footer-minititle">Help and support</div>
+            <ul>
+              <li><a data-test="faq-link" href="">Duolingo FAQs</a></li>
+              <li>
+                <a href="https://duolingoschools.zendesk.com/hc/en-us"
+                  >Schools FAQs</a
+                >
+              </li>
+              <li>
+                <a href="https://englishtest.duolingo.com/faq"
+                  >Duolingo English Test FAQs</a
+                >
+              </li>
+              <li><a href="https://status.duolingo.com/">Status</a></li>
+            </ul>
+          </div>
+  
           
         </section>
   
