Add <> social container content

--- a/index.html
+++ b/index.html
@@ -354,7 +354,21 @@
               </ul>
             </div>
   
-            
+            <div>
+              <div class="footer-minititle">Social</div>
+              <ul>
+                <li><a href="https://blog.duolingo.com">Blog</a></li>
+                <li>
+                  <a href="https://www.instagram.com/duolingo">Instagram</a>
+                </li>
+                <li><a href="https://www.tiktok.com/@duolingo">TikTok</a></li>
+                <li><a href="https://twitter.com/duolingo">Twitter</a></li>
+                <li>
+                  <a href="https://www.youtube.com/user/duolingo">YouTube</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </section>
   
         
