Add <> site language section

--- a/index.html
+++ b/index.html
@@ -371,7 +371,99 @@
           </div>
         </section>
   
-        
+        <hr />
+  
+        <section class="footer-sec2">
+          <div>
+            <div class="footer-sec2-title">Site language:</div>
+            <ul>
+              <li class="footer-li">
+                <a href="//ar.duolingo.com" class="footer-a">العربية</a>
+              </li>
+              <li class="footer-li">
+                <a href="//bn.duolingo.com" class="footer-a">বাংলা</a>
+              </li>
+              <li class="footer-li">
+                <a href="//cs.duolingo.com" class="footer-a">Čeština</a>
+              </li>
+              <li class="footer-li">
+                <a href="//de.duolingo.com" class="footer-a">Deutsch</a>
+              </li>
+              <li class="footer-li">
+                <a href="//el.duolingo.com" class="footer-a">Ελληνικά</a>
+              </li>
+              <li class="footer-li">
+                <a href="//en.duolingo.com" class="footer-a">English</a>
+              </li>
+              <li class="footer-li">
+                <a href="//es.duolingo.com" class="footer-a">Español</a>
+              </li>
+              <li class="footer-li">
+                <a href="//fr.duolingo.com" class="footer-a">Français</a>
+              </li>
+              <li class="footer-li">
+                <a href="//hi.duolingo.com" class="footer-a">हिंदी</a>
+              </li>
+              <li class="footer-li">
+                <a href="//hu.duolingo.com" class="footer-a">Magyar</a>
+              </li>
+              <li class="footer-li">
+                <a href="//id.duolingo.com" class="footer-a">Bahasa Indonesia</a>
+              </li>
+              <li class="footer-li">
+                <a href="//it.duolingo.com" class="footer-a">Italiano</a>
+              </li>
+              <li class="footer-li">
+                <a href="//ja.duolingo.com" class="footer-a">日本語</a>
+              </li>
+              <li class="footer-li">
+                <a href="//ko.duolingo.com" class="footer-a">한국어</a>
+              </li>
+              <li class="footer-li">
+                <a href="//dn.duolingo.com" class="footer-a">Nederlands</a>
+              </li>
+              <li class="footer-li">
+                <a href="//pl.duolingo.com" class="footer-a">Polski</a>
+              </li>
+              <li class="footer-li">
+                <a href="//pt.duolingo.com" class="footer-a">Português</a>
+              </li>
+              <li class="footer-li">
+                <a href="//ro.duolingo.com" class="footer-a">Română</a>
+              </li>
+              <li class="footer-li">
+                <a href="//ru.duolingo.com" class="footer-a">Русский</a>
+              </li>
+              <li class="footer-li">
+                <a href="//sv.duolingo.com" class="footer-a">svenska</a>
+              </li>
+              <li class="footer-li">
+                <a href="//ta.duolingo.com" class="footer-a">தமிழ்</a>
+              </li>
+              <li class="footer-li">
+                <a href="//te.duolingo.com" class="footer-a">తెలుగు</a>
+              </li>
+              <li class="footer-li">
+                <a href="//th.duolingo.com" class="footer-a">ภาษาไทย</a>
+              </li>
+              <li class="footer-li">
+                <a href="//tl.duolingo.com" class="footer-a">Tagalog</a>
+              </li>
+              <li class="footer-li">
+                <a href="//tr.duolingo.com" class="footer-a">Türkçe</a>
+              </li>
+              <li class="footer-li">
+                <a href="//uk.duolingo.com" class="footer-a">Українською</a>
+              </li>
+              <li class="footer-li">
+                <a href="//vi.duolingo.com" class="footer-a">Tiếng Việt</a>
+              </li>
+              <li class="footer-li">
+                <a href="//zs.duolingo.com" class="footer-a">中文</a>
+              </li>
+            </ul>
+          </div>
+        </section>
       </footer>
     
 </body>
